Remove tmux status line background

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,7 +28,7 @@ set-option -a terminal-overrides 'screen-256color:Tc'
 
 set -g prefix C-a
 unbind C-b
-bind C-Space send-prefix
+bind C-a send-prefix
 
 setw -g mode-keys vi
 set -g mouse on
@@ -52,10 +52,10 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Vim-Tmux-Navigator settings: Use both Ctrl+arrow and Ctrl+h/j/k/l for pane movement
-set -g @vim_navigator_mapping_left "C-Left C-h"
+set -g @vim_navigator_mapping_left "C-h"
 set -g @vim_navigator_mapping_down "C-j"
 set -g @vim_navigator_mapping_up   "C-k"
-set -g @vim_navigator_mapping_right "C-Right C-l"
+set -g @vim_navigator_mapping_right "C-l"
 set -g @vim_navigator_mapping_prev ""  # disables C-\ binding
 
 # ==============================================================================
@@ -79,25 +79,25 @@ run '~/.tmux/plugins/tpm/tpm'
 
 set -g status-position top
 set -g status-justify right
-set -g status-style "bg=#{@thm_bg}"
+set -g status-style "none"
 
 # Status left look and feel
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
 # Status right look and feel
 set -g status-right-length 100
 set -g status-right ""
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-right "#[fg=#{@thm_overlay_0},none]│"
 set -ga status-right "#[fg=#{@thm_blue}]  "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 --graph-lines 0 --mem-mode 2)#[default]"
+set -ga status-right "#[fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2 --graph-lines 0 --mem-mode 2)#[default]"
 set -ga status-right " "
 
 # ==============================================================================
@@ -106,8 +106,8 @@ set -ga status-right " "
 
 setw -g pane-border-status top
 setw -g pane-border-format ""
-setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
-setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-active-border-style "fg=#{@thm_surface_0}"
+setw -g pane-border-style "fg=#{@thm_surface_0}"
 setw -g pane-border-lines single
 
 # ==============================================================================
