Revert tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # tmux source-file .config/tmux/tmux.conf
 
-# ============================================================================
+# ==============================================================================
 # TokyoNight Color Variables
-# ============================================================================
+# ==============================================================================
 
 set -g @thm_bg "#222436"
 set -g @thm_blue "#82aaff"
@@ -15,17 +15,16 @@ set -g @thm_green "#c3e88d"
 set -g @thm_yellow "#ffc777"
 set -g @thm_maroon "#ff966c"
 
-# ============================================================================
+# ==============================================================================
 # TPM Bootstrap: only clone TPM if not already installed
-# ============================================================================
+# ==============================================================================
 if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
-  'run "git clone https://github.com/tmux-plugins/tpm \
-  ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins"'
+  'run "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins"'
 
-# ============================================================================
+# ==============================================================================
 # General Settings
-# ============================================================================
-set-option -a terminal-overrides 'screen-256color: Tc'
+# ==============================================================================
+set-option -a terminal-overrides 'screen-256color:Tc'
 
 set -g prefix C-a
 unbind C-b
@@ -44,25 +43,24 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g escape-time 0
 set -g aggressive-resize on
 
-# ============================================================================
+# ==============================================================================
 # Key Bindings
-# ============================================================================
+# ==============================================================================
 
 # Reload tmux configuration easily
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Vim-Tmux-Navigator settings: Use both Ctrl+arrow and Ctrl+h/j/k/l for
-# pane movement
+# Vim-Tmux-Navigator settings: Use both Ctrl+arrow and Ctrl+h/j/k/l for pane movement
 set -g @vim_navigator_mapping_left "C-h"
 set -g @vim_navigator_mapping_down "C-j"
 set -g @vim_navigator_mapping_up   "C-k"
 set -g @vim_navigator_mapping_right "C-l"
 set -g @vim_navigator_mapping_prev ""  # disables C-\ binding
 
-# ============================================================================
+# ==============================================================================
 # TPM Plugin Management
-# ============================================================================
+# ==============================================================================
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -75,9 +73,9 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # Initialize TPM (keep at the very bottom of plugin block)
 run '~/.tmux/plugins/tpm/tpm'
 
-# ============================================================================
+# ==============================================================================
 # Status Bar Configuration
-# ============================================================================
+# ==============================================================================
 
 set -g status-position top
 set -g status-justify right
@@ -86,30 +84,25 @@ set -g status-style "none"
 # Status left look and feel
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left \
-"#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },\
-#{#[fg=#{@thm_green}]  #S }}"
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[fg=#{@thm_green}]  #S }}"
 set -ga status-left "#[bg=default,fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[fg=#{@thm_maroon}]  #{pane_current_command} "
 set -ga status-left "#[fg=#{@thm_overlay_0},none]│"
-set -ga status-left \
-"#[fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[fg=#{@thm_overlay_0},none]#{? window_zoomed_flag,│,}"
-set -ga status-left "#[fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+set -ga status-left "#[fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
 # Status right look and feel
 set -g status-right-length 100
 set -g status-right ""
 set -ga status-right "#[fg=#{@thm_overlay_0},none]│"
-set -ga status-right "#[fg=#{@thm_blue}]  "
-set -ga status-right \
-"#[fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/\
-tmux-mem-cpu-load --interval 3 --graph-lines 0 --mem-mode 2)#[default]"
+set -ga status-right "#[fg=#{@thm_blue}]  "
+set -ga status-right "#[fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 3 --graph-lines 0 --mem-mode 2)#[default]"
 set -ga status-right " "
 
-# ============================================================================
+# ==============================================================================
 # Pane Border Configuration
-# ============================================================================
+# ==============================================================================
 
 setw -g pane-border-status top
 setw -g pane-border-format ""
@@ -117,20 +110,19 @@ setw -g pane-active-border-style "fg=#{@thm_surface_0}"
 setw -g pane-border-style "fg=#{@thm_surface_0}"
 setw -g pane-border-lines single
 
-# ============================================================================
+# ==============================================================================
 # Window Configuration
-# ============================================================================
+# ==============================================================================
 
 set -wg automatic-rename on
 set -g automatic-rename-format "Window"
 
-set -g window-status-format " #I#{? #{!=:#{window_name},Window},: #W,} "
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-style "fg=#{@thm_surface_0}"
 set -g window-status-last-style "fg=#{@thm_peach}"
 set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
 set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
 set -gF window-status-separator "#[fg=#{@thm_overlay_0}]│"
 
-set -g window-status-current-format \
-" #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
