Separate config for linux and macos

--- a/macos/.config/tmux/tmux.conf
+++ b/macos/.config/tmux/tmux.conf
@@ -49,7 +49,7 @@ set -g aggressive-resize on
 
 # Reload tmux configuration easily
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # Vim-Tmux-Navigator settings: Use both Ctrl+arrow and Ctrl+h/j/k/l for pane movement
 set -g @vim_navigator_mapping_left "C-h"
