Update niri config

--- a/linux/.config/tmux/tmux.conf
+++ b/linux/.config/tmux/tmux.conf
@@ -47,10 +47,6 @@ set -g aggressive-resize on
 # Key Bindings
 # ==============================================================================
 
-# Reload tmux configuration easily
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
-
 # Vim-Tmux-Navigator settings: Use both Ctrl+arrow and Ctrl+h/j/k/l for pane movement
 set -g @vim_navigator_mapping_left "C-h"
 set -g @vim_navigator_mapping_down "C-j"
@@ -67,7 +63,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-battery'
-# REMOVED: thewtex/tmux-mem-cpu-load plugin (plugin causes issues on linux)
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TPM (keep at the very bottom of plugin block)
