--- a/macos/.gitconfig
+++ b/macos/.gitconfig
@@ -1,3 +1,16 @@
 [user]
-	name = nielwyn
-	email = nghoangnghiabt@gmail.com
+    name = nielwyn
+    email = nghoangnghiabt@gmail.com
+
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta
+
+[delta]
+    navigate = true
+    dark = true
+
+[merge]
+    conflictStyle = zdiff3
