[linux, macos] Add tmux quick source keybind

--- a/macos/.config/tmux/tmux.conf
+++ b/macos/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# tmux source-file .config/tmux/tmux.conf
+# tmux source-file ~/dotfiles/macos/.config/tmux/tmux.conf
 
 # ==============================================================================
 # TokyoNight Color Variables
@@ -28,6 +28,7 @@ if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
+bind r source-file ~/dotfiles/macos/.config/tmux/tmux.conf \; display "Config reloaded!"
 
 setw -g mode-keys vi
 set -g mouse on
