--- a/macos/.config/tmux/tmux.conf
+++ b/macos/.config/tmux/tmux.conf
@@ -93,7 +93,7 @@ set -g status-right-length 100
 set -g status-right ""
 set -ga status-right "#[fg=#{@thm_overlay_0},none]│"
 set -ga status-right "#[fg=#{@thm_blue}]  "
-set -ga status-right "#[fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 3 --graph-lines 0 --mem-mode 2)#[default]"
+set -ga status-right "#[fg=#{@thm_blue}]#($HOME/.config/tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 3 --mem-mode 2)#[default]"
 set -ga status-right " "
 
 # ==============================================================================
